# opencv-get-ball-movement

./: .gitignore  CMakeLists.txt  README.MD
src/: main.cpp
